[tool.poetry]
name = "radiocore"
version = "1.0.0"
description = "Python based library for FM, AM and WBFM demodulation."
readme = "README.md"
license = "GPL-3.0"
authors = [
    "Luigi Cruz <@luigifcruz>",
]

[project.urls]
homepage = "https://github.com/luigifcruz/radio-core"
repository = "https://github.com/luigifcruz/radio-core"
documentation = "https://luigifcruz.github.io/radio-core/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportGeneralTypeIssues = false

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.2"
scipy = "^1.7.1"
cupy = {version = "^9.5.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
Sphinx = "^4.2.0"
